# OpenRTX

./: .gitignore  README.md  meson.build
STM32F4/: .mxproject  STM32F4.ioc
STM32F4/Core/: keep_old_functions.txt
STM32F4/Core/Inc/: ST7735S.h  main.h  main.h.bak  openrtxfunctions.h
STM32F4/Core/Src/: ST7735S_a36plus.c  main.c  main.c.bak  openrtxfunctions.c
STM32F4/MDK-ARM/: STM32F4.uvguix.Tris  STM32F4.uvoptx  STM32F4.uvprojx  startup_stm32f401xe.s
STM32F4/MDK-ARM/STM32F4/: STM32F4.axf  STM32F4.build_log.htm  STM32F4.htm  STM32F4.lnp  STM32F4_STM32F4.dep
older functions/: display.prev.c  graphics.prev.c
openrtx/include/core/: audio_path.h  filesystem.h  gps.h  graphics.h  input.h  lfs.h  rtxlink.h  rtxlink_dat.h  settings.h  state.h  ui.h  voicePromptUtils.h
openrtx/include/interfaces/: filesystem.h  nvmem.h  platform.h  radio.h
openrtx/include/peripherals/: gpio.h
openrtx/include/rtx/: OpMode.hpp  rtx.h
openrtx/include/ui/: EnglishStrings.h  SpanishStrings.h  ui_default.h  ui_mod17.h
openrtx/src/core/: audio_codec.c  battery.c  cps.c  filesystem.c  graphics.c  input.c  lfs.c  openrtx.c  rtxlink.c  rtxlink_cat.c  rtxlink_dat.c  rtxlink_fmp.c  state.c  threads.c
openrtx/src/rtx/: OpMode_FM.cpp  rtx.cpp
openrtx/src/ui/: ui.c
platform/drivers/CPS/: cps_io_libc.c  cps_io_native_A36plus.c
platform/drivers/NVM/: W25Qx.c  W25Qx.h  filesystem_spiFlash.c  nvmem_A36Plus.c  nvmem_Mod17.c  spiFlash_A36plus.c
platform/drivers/audio/: audio_A36Plus.c
subprojects/: littlefs.wrap
subprojects/packagefiles/littlefs/: meson.build
tests/unit/: lfs.c
(+47 files in other folders)
